Updated to v0.2.0